# mi-home-toolkit

./: README.md  angular.json  generate_ico.sh  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/devices/: Cargo.toml
src-tauri/devices/src/: devices.rs  features.rs  lib.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/miio/: Cargo.toml
src-tauri/miio/src/: async_challenge.rs  captcha.rs  lib.rs
src-tauri/src/: main.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts  auth.service.ts  config.service.ts  constants.ts  helpers.ts  mi.service.ts  types.ts
src/app/card/: device.component.ts
src/app/dialogs/: dialog.directive.ts
src/app/dialogs/execute-command-dialog/: execute-command-dialog.component.ts
src/app/dialogs/set-country-dialog/: set-country-dialog.component.ts
src/app/icon/: icon.component.ts  icon.types.ts
src/app/pages/: devices-page.component.ts  login-page.component.ts
