workspace = {members = ["miio"] }
[package]
authors = ["Dmitrii Kuzmin"]
description = "A Tauri App"
edition = "2021"
name = "mi-home-toolkit"
version = "1.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0.82"
lazy_static = "1.4.0"
miio = {path = "./miio/"}
serde = {version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tauri = {version = "2.5.0", features = [] }
tauri-plugin-http = "2.4.3"
tauri-plugin-log = "2.4.0"
tauri-plugin-shell = "2.2.1"
tokio = {version = "1.37.0", features = ["full"] }
trace = "0.1.7"
